src/components/MainInput/inputs/InputBody.module.scss
@import "../../../styles/variables";

.heading {
  border-radius: $border-radius-default;
  overflow: hidden;
  box-shadow: $boxShadow-default;
  margin-bottom: $padding-less;
  display: flex;
  input,
  span[data-input="true"] {
    padding: $padding-less;
    border: none;
    border-radius: 0;
    order: 1;
  }
}

.colorInput {
  height: 100%;
  width: 32px;
  order: 0;
  border: none;
}

.color {
  height: $padding-large * 2;
  width: $padding-large * 2;
  padding: 0;
  border-radius: $border-radius-default;
  overflow: hidden;
  box-shadow: $boxShadow-default;
  cursor: pointer;
  &::-webkit-color-swatch-wrapper {
    padding: 0;
  }
  &::-webkit-color-swatch {
    border: none;
  }
}

.colorMenu {
  padding: $padding-default;
  input {
    padding: 0;
    border-radius: $border-radius-default;
  }
}

.colorMenuHeader {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  button {
    background: var(--default-backgroundcolor) !important;
    box-shadow: $boxShadow-default !important;
    display: flex !important;
    align-items: center;
    justify-content: center;
  }
}

.inputBody {
  height: 100%;
  overflow-y: auto;
  padding: $padding-less;
  padding-top: $padding-default * 2;
  display: flex;
  flex-direction: column;
  background: var(--default-color);
  box-shadow: $boxShadow-default;

  & > div {
    // margin-bottom: $padding-default;
  }
  input,
  textarea,
  span[data-input="true"] {
    border: none;
    border-radius: 0;
    font-family: "Poppins";
    background-color: transparent;
  }
  a {
    margin-inline: $padding-default;
    margin-block: $padding-less;
    display: block;
    width: fit-content;
    &:hover {
      text-decoration: underline !important;
    }
  }
}

.addInput {
  position: relative;
  padding-block: $padding-default;

  &::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    height: 50%;
    // padding-block: $padding-less;
    // border-radius: $border-radius-default;
    // margin-inline: $padding-default;
    width: calc(100% - $padding-default);
    transform: translate(-50%, -50%);
    border: 2px dashed var(--vless-alpha-text-color);
    background: var(--vless-alpha-text-color);
    border-radius: 4px;
    opacity: 0;
    transition: opacity 0.1s ease-in-out;
    z-index: -1;
  }
  &:hover {
    &::after {
      opacity: 1;
    }
  }
}

